test_regress/t/t_sys_readmem_bad_addr.out
%Error: t/t_sys_readmem_bad_addr.mem:9: $readmem file address beyond bounds of array
Aborting...
